--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.6"
 services:
   mongodb:
-    image: mongo:latest
+    image: mongo:3.6
     container_name: mongodb
     ports:
       - 27017:27017
