new version instead of git tag

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         id: increment-git-tag
         uses: swarajroy/increment-git-tag@v1
         with:
-          version-type: minor
+          version-type: patch
 
       - name: Get the New Version
         run: echo "New version is ${{ steps.increment-git-tag.outputs.new-version }}"
@@ -38,8 +38,8 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: golang/hotel-reservation-api
-          IMAGE_TAG: ${{ steps.increment-git-tag.outputs.git-tag }}
+          IMAGE_TAG: ${{ steps.increment-git-tag.outputs.new-version }}
         run: |
-          echo "The git tag is ${{ steps.increment-git-tag.outputs.git-tag }}"
+          echo "The git tag is ${{ steps.increment-git-tag.outputs.new-version }}"
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
